<resources>
    <string name="app_name">Vásárló alkalmazás</string>
    <string name="add">Add</string>
    <string name="view_data">View Data</string>
    <string name="button">Button</string>
    <string name="darab">Egység</string>
    <string name="n_v">Név</string>
    <string name="vonalk_d">Vonalkód</string>
    <string name="price">Ár</string>
    <string name="ssz_r">Összár:</string>
    <string name="hozz_ad">Hozzáad</string>
    <string name="lista">Lista</string>
    <string name="hozz_ad_add">Hozzáad</string>
    <string name="vonalk_d_btn">Vonalkód</string>
    <string name="delete">DELETE</string>
    <string name="darab_edit">Darab</string>
    <string name="n_v_edit">Név</string>
    <string name="save">SAVE</string>
    <string name="vonalk_d_edit">Vonalkód</string>
    <string name="r_edit">Ár</string>
    <string name="t_rl_s">TÖRLÉS</string>
    <string name="ment_s">MENTÉS</string>
    <string name="egys_g_r_add">Egységár</string>
    <string name="egys_g_r_edit">Egységár</string>
    <string name="action_settings">Settings</string>
    <string name="percentage">Akciók megadás</string>
    <string name="sort">Rendezés</string>
    <string name="shops">Boltok kínálatai</string>
    <string name="whislist">Bevásárló lista</string>
    <string name="login">Bejelentkezés</string>
    <string name="szazalek">Százalék</string>
    <string name="osszeg">Összeg</string>
    <string name="ft">Ft</string>
    <string name="percent">%</string>
    <string name="ok">OK</string>
    <string name="szamol">Számol</string>
    <string name="kedvezm_nyes_r">Kedvezményes ár:</string>
    <string name="darabsz_m_cs_kken">Darabszám csökkenő</string>
    <string name="bet_rend">Betűrend</string>
    <string name="darabsz_m_n_vekv">Darabszám növekvő</string>
    <string name="ford_tott_bet_rend">Fordított betűrend</string>
    <string name="rszerint_cs_kken">Ár szerint csökkenő</string>
    <string name="rszerint_n_vekv">Ár szerint növekvő</string>
    <string name="nymera1234">Nymera1234</string>
    <string name="arya_facelessmen_bra">arya@facelessmen.bra</string>
    <string name="regisztr_ci">Regisztráció</string>
    <string name="ha_m_g_nem_regisztr_lt_kattintson_ide">Ha még nem regisztrált kattintson ide!</string>
    <string name="bel_p_s">belépés</string>
    <string name="felhaszn_l_bel_p_s">Felhasználó belépés</string>
    <string name="felhaszn_l_regisztr_l_s">Felhasználó regisztrálás</string>
    <string name="ha_m_r_regisztr_lt_kattintson_ide">Ha már regisztrált kattintson ide!</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="id_rendbenli">Időrendbeli</string>
    <string name="input">Input</string>
    <string name="uzenet">Üzenet</string>
    <string name="akci_figyel_f_rum">Akciófigyelő fórum</string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="gyors_v_s_rl_s">Gyors vásárlás</string>
    <string name="rengedm_ny">Árengedmény(%)</string>
    <string name="term_k_neve">Termék neve</string>
    <string name="_0_ft">0 Ft</string>
    <string name="egys_g">Egység</string>
    <string name="precent">%</string>
    <string name="rengedm_ny_perc">Árengedmény (%)</string>
    <string name="visszal_p_s">Visszalépés</string>

</resources>
