<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.laci.listazas.MainActivity">
    <item
        android:id="@+id/set_percentage"
        android:orderInCategory="100"
        android:title="@string/percentage"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort"
        android:orderInCategory="100"
        android:title="@string/sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/shops"
        android:orderInCategory="100"
        android:title="@string/shops"
        app:showAsAction="never" />

    <item
        android:id="@+id/whislist"
        android:orderInCategory="100"
        android:title="@string/whislist"
        app:showAsAction="never" />

    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="never" />
</menu>
