<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.laci.listazas.LoginActivity">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/felhaszn_l_bel_p_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cim"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textAllCaps="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/eT_email_login"
            android:hint="@string/arya_facelessmen_bra"
            android:layout_margin="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/eT_password_login"
            android:hint="@string/nymera1234"
            android:layout_margin="15dp" />

        <Button
            android:text="@string/bel_p_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signin" />

        <TextView
            android:text="@string/ha_m_g_nem_regisztr_lt_kattintson_ide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_signup"
            android:textAlignment="center"
            android:textStyle="normal|italic"
            android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color" />

        <com.google.android.gms.common.SignInButton
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/googleBtn"/>

    </LinearLayout>

</RelativeLayout>
