<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_discount_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laci.listazas.DiscountAddActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/relativeLayout6">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="179dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_nev"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/n_v"
                android:textSize="20sp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_barcode_scan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignBaseline="@+id/txt_vonalkod"
                android:layout_alignBottom="@+id/txt_vonalkod"
                android:layout_toEndOf="@+id/relativeLayout1"
                android:layout_toRightOf="@+id/relativeLayout1"
                android:text="@string/vonalk_d_btn" />

            <TextView
                android:id="@+id/tv_egyseg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/editText_darab"
                android:layout_alignLeft="@+id/txt_vonalkod"
                android:layout_alignStart="@+id/txt_vonalkod"
                android:text="@string/darab"
                android:textSize="20sp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_ar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/tv_egyseg"
                android:layout_alignStart="@+id/tv_egyseg"
                android:layout_below="@+id/tv_egyseg"
                android:text="@string/egys_g_r_add"
                android:textSize="20sp"
                android:textAlignment="center" />

            <TextView
                android:text="Ennyit fizet:"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/tv_pay"
                android:textSize="20sp"
                android:textAlignment="center" />

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/np_pay" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <AutoCompleteTextView
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:inputType=""
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editText_vonalkod"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/txt_vonalkod"
                android:layout_alignLeft="@+id/editText"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/editText"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />

            <EditText
                android:id="@+id/editText_darab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/editText_vonalkod"
                android:layout_alignStart="@+id/editText_vonalkod"
                android:layout_below="@+id/editText_vonalkod"
                android:ems="15"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editText_darabar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/txt_ar"
                android:layout_alignLeft="@+id/editText_darab"
                android:layout_alignStart="@+id/editText_darab"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:text="Ennyit kap:"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/tv_get"
                android:textSize="20sp"
                android:textAlignment="center" />

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/np_get" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="51dp"
            android:layout_marginStart="51dp"
            android:text="@string/hozz_ad_add"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:text="@string/lista"
            tools:ignore="RtlHardcoded"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btnAdd"
            android:layout_toEndOf="@+id/btnAdd"
            android:layout_marginStart="34dp" />

    </RelativeLayout>

</RelativeLayout>
